name:
  potoki-hasql
version:
  1
synopsis:
  Simple streaming in IO.
description:
  This library provides a new simpler approach to the IO-streaming problem in Hasql.
category:
  Streaming, Data base
homepage:
  https://github.com/metrix-ai/potoki-hasql 
bug-reports:
  https://github.com/metrix-ai/potoki-hasql/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Metrix.AI Ninjas <ninjas@metrix.ai>
copyright:
  (c) 2018, Metrix.AI
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.24

source-repository head
  type:
    git
  location:
    git://github.com/metrix-ai/potoki-hasql.git

library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  exposed-modules:
    PotokiHasql.Potoki.Consume
    PotokiHasql.Potoki.Produce
  other-modules:
    PotokiHasql.Error.Hasql
    PotokiHasql.Error.Instances
    PotokiHasql.Error.Types
    PotokiHasql.Prelude
  build-depends:
    foldl >= 1.3 && < 2,
    hasql == 0.19.* || == 1.*,
    hasql-pool == 0.4.*,
    potoki >= 0.10 && < 0.12,
    potoki-core >= 1.2 && < 1.6,
    base == 4.*,
    vector-builder >= 0.1 && < 0.4,
    text == 1.*,
    bytestring >= 0.10 && < 0.11,
    vector >= 0.10 && < 0.13,
    profunctors >= 5.1 && < 6
