name:
  potoki-hasql
version:
  1.6.2
synopsis:
  Integration of "potoki" and "hasql".
description:
  Utilities, which integrate Hasql and Potoki.
category:
  Streaming, Database
homepage:
  https://github.com/metrix-ai/potoki-hasql 
bug-reports:
  https://github.com/metrix-ai/potoki-hasql/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Metrix.AI Ninjas <ninjas@metrix.ai>
copyright:
  (c) 2018, Metrix.AI
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >= 1.24

source-repository head
  type:
    git
  location:
    https://github.com/metrix-ai/potoki-hasql.git

library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  exposed-modules:
    Potoki.Hasql.Consume
    Potoki.Hasql.Produce
    Potoki.Hasql.Error
    Potoki.Hasql.Error.Instances
    Potoki.Hasql.Error.Types
  other-modules:
    Potoki.Hasql.Prelude
    Potoki.Hasql.IO
    Potoki.Hasql.Error.Hasql
  build-depends:
    acquire >= 0.2.0.1 && < 0.3,
    base >= 4.10.1.0 && < 5,
    bytestring >= 0.10.8.2 && < 0.11,
    hasql >= 1.3 && < 1.4,
    potoki-core >= 2.2.5 && < 2.3,
    profunctors >= 5.2.2 && < 5.3,
    text >= 1.2.3.0 && < 1.3,
    vector >= 0.12.0.1 && < 0.13,
    bytestring-tree-builder,
    system-uuid >= 2.1.1 && < 2.2

test-suite tasty
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    -- database:
    hasql,
    potoki-hasql,
    -- testing:
    tasty >= 0.12 && < 2,
    tasty-quickcheck >= 0.9 && < 0.11,
    tasty-hunit >= 0.9 && < 0.11,
    quickcheck-instances >= 0.3.11 && < 0.4,
    QuickCheck >= 2.8.1 && < 3,
    -- general:
    data-default-class,
    potoki,
    -- 
    rerebase < 2
